# HidraNet

./: .env.example  .gitignore
hidra-browser/: forumclean.js  forumtest.js  mailtest.js  package-lock.json  package.json
hidra-browser/scripts/: build-linux.js  build-mac.js  pack-portable.js  prepare-build.js
hidra-browser/src/fingerprint/: engine.js
hidra-browser/src/main/: main.js  proxy-manager.js  tab-manager.js
hidra-browser/src/renderer/: preload.js  sevennine-publish.js  tab-preload.js
hidra-browser/src/ui/: browser.css  browser.html  browser.js  donate.html  forum.html  hidrachat.html  hidramail.html  hidrasearch.html  newtab.html  siteload.html  (+1 more)
hidra-monitor/: Abrir Painel.bat  LEIA-ME.txt  index.html
hidra-node/: .gitignore  Cargo.toml  config.toml  config_chat.toml  config_mail.toml
hidra-node/src/: api.rs  config.rs  error.rs  logging.rs  main.rs
hidra-node/src/apps/: hidrachat.rs  sevennine.rs
hidra-node/src/client/: circuit_pool.rs  mod.rs  proxy_runner.rs  session.rs  streaming.rs
hidra-node/src/crypto/: handshake.rs  keys.rs  mod.rs
hidra-node/src/network/: connection.rs  listener.rs
hidra-node/src/onion/: builder.rs  cell.rs  circuit.rs  layer.rs  mod.rs
hidra-node/src/p2p/: bootstrap.rs  discovery.rs  mod.rs
hidra-node/src/p2p/dht/: handler.rs  kbuckets.rs  message.rs  mod.rs  node.rs
hidra-node/src/proxy/: mod.rs  resolver.rs  socks5.rs  stream_handler.rs
hidra-node/src/relay/: mod.rs  registry.rs  router.rs
hidra-node/tests/: dht_discovery.rs  integration.rs  key_agreement.rs  onion_routing.rs
landing/: index.html
